add progress bar

--- a/RemoveZero/RemoveZero.csproj
+++ b/RemoveZero/RemoveZero.csproj
@@ -5,7 +5,7 @@
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{17BCDC31-CE99-4ABD-8AA4-8F5E57A82694}</ProjectGuid>
-    <OutputType>Exe</OutputType>
+    <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>RemoveZero</RootNamespace>
     <AssemblyName>RemoveZero</AssemblyName>
